// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineViewer component passes expected props 1`] = `
<EuiPage>
  <EuiPageBody>
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Logstash pipelines"
          id="xpack.monitoring.logstash.pipeline_viewer.heading"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <EuiPageContent
      className="monPipelineViewer"
      horizontalPosition="center"
      verticalPosition="center"
    >
      <StatementSection
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "standardInput",
              "parentId": null,
            },
          ]
        }
        headingText="Inputs"
        iconType="logstashInput"
        onShowVertexDetails={[MockFunction]}
      />
      <EuiSpacer />
      <Queue
        queue={
          Object {
            "hasExplicitId": false,
            "id": "__QUEUE__",
            "meta": null,
            "stats": Array [],
          }
        }
      />
      <EuiSpacer />
      <StatementSection
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "mutate",
              "parentId": null,
            },
          ]
        }
        headingText="Filters"
        iconType="logstashFilter"
        onShowVertexDetails={[MockFunction]}
      />
      <EuiSpacer />
      <StatementSection
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "elasticsearch",
              "parentId": null,
            },
          ]
        }
        headingText="Outputs"
        iconType="logstashOutput"
        onShowVertexDetails={[MockFunction]}
      />
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;

exports[`PipelineViewer component renders DetailDrawer when selected vertex is not null 1`] = `
<EuiPage>
  <EuiPageBody>
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Logstash pipelines"
          id="xpack.monitoring.logstash.pipeline_viewer.heading"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <EuiPageContent
      className="monPipelineViewer"
      horizontalPosition="center"
      verticalPosition="center"
    >
      <StatementSection
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "standardInput",
              "parentId": null,
            },
          ]
        }
        headingText="Inputs"
        iconType="logstashInput"
        onShowVertexDetails={[MockFunction]}
      />
      <EuiSpacer />
      <Queue
        queue={
          Object {
            "hasExplicitId": false,
            "id": "__QUEUE__",
            "meta": null,
            "stats": Array [],
          }
        }
      />
      <EuiSpacer />
      <StatementSection
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "mutate",
              "parentId": null,
            },
          ]
        }
        headingText="Filters"
        iconType="logstashFilter"
        onShowVertexDetails={[MockFunction]}
      />
      <EuiSpacer />
      <StatementSection
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "elasticsearch",
              "parentId": null,
            },
          ]
        }
        headingText="Outputs"
        iconType="logstashOutput"
        onShowVertexDetails={[MockFunction]}
      />
      <DetailDrawer
        onHide={[Function]}
        vertex={
          Object {
            "id": "stdin",
          }
        }
      />
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;
